welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: not found: value tab
	for (i <- 0 to tab.length-1)
                       ^