welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = 
{
	for (i <- 0 to tab.length-1)
	{
		if (tab(i)==value)
		{
			return nums(i)
		} else {
			return -1
		}
	}
}
